Issue #13153: Tkinter functions now raise TclError instead of ValueError when a unicode argument contains non-BMP character.